--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>713s home</title>
 </head>
 <body>
-    <h1 class="title">713s homepage</h1>
-    <p><a href="https://713s.github.io//">Zhihu</a></p>
+    <h1 class="title">抄书指北</h1>
+    <p><a href="https://713s.github.io//">Home</a></p>
     <h2 class="intro">自己</h2>
     <ul>
         <li><a href="intro.html">自我介绍</a>▶713s</li>
