--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta name="description" content="713s homepage" />
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>713s home</title>
+    <title>抄书指北</title>
 </head>
 <body>
     <h1 class="title">抄书指北</h1>
     <p><a href="https://713s.github.io//">Home</a></p>
-    <h2 class="intro">自己</h2>
+    <h2 class="intro">自己 7s13s</h2>
     <ul>
         <li><a href="intro.html">自我介绍</a>▶713s</li>
     </ul>
