--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <h1 class="title">抄书指北</h1>
     <p><a href="https://713s.github.io//">Home</a></p>
-    <h2 class="intro">自己 7s13s</h2>
+    <h2 class="intro">自己 713s</h2>
     <ul>
         <li><a href="intro.html">自我介绍</a>▶713s</li>
     </ul>
