--- a/log.html
+++ b/log.html
@@ -8,7 +8,7 @@
     <title>713s 日志</title>
 </head>
 <body>
-    <h1 class="title">一些原有的日志. </h1>
+    <h1 class="title">一些原有的日志 </h1>
     <p>一些旧的日志, 后续也会补充. </p>
     <h2>注意事項</h2>
     <ul>
