--- a/log.html
+++ b/log.html
@@ -17,8 +17,10 @@
     <div class="pdf">
     <h2>PDF</h2>
     <ul>
-        日文的, 一些流形的内容. "mapstoが今までに書いた数学のPDFを載せています" <br>
-        [<a href="pdf/manifold.pdf">PDF</a>]
+        [<a href="pdf/manifold.pdf">流形</a>] 日文的, 一些流形的内容. "mapstoが今までに書いた数学のPDFを載せています" <br>
+        
+        [<a href="pdf/udlimit.pdf">测度论中上下极限</a>] 当时不理解的内容<br>
+        
 
     </ul>
     </div>
