--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         <li><a href="math.html">数学</a> ▶713sの数学 </li>
         <li><a href="log.html">日志</a> ▶713sの一些日志 </li>
     </ul>
+    <h2 class="story">小说</h2>
+    <ul>
+        <li><a href="story.html">story</a> ▶记录的一些小说和摘录 </li>
+    </ul>
+    <h2 class="log">碎碎念</h2>
+    <ul>
+        <li><a href="log.html">story</a> ▶一些生活的痕迹 </li>
+    </ul>
+
     <footer>
         <p>Last Modified: 10:45 2024/02/02</p>
         <p>风格源于: <a href="https://mapsto.github.io">mapsto</a></p>
