--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h2 class="math">数学</h2>
     <ul>
         <li><a href="math.html">数学</a> ▶713sの数学 </li>
-        <li><a href="log.html">日志</a> ▶713sの一些日志 </li>
+        <li><a href="log.html">日志</a> ▶713sの一些数学日志 </li>
     </ul>
     <h2 class="story">小说</h2>
     <ul>
@@ -25,7 +25,7 @@
     </ul>
     <h2 class="log">碎碎念</h2>
     <ul>
-        <li><a href="log.html">story</a> ▶一些生活的痕迹 </li>
+        <li><a href="log.html">日志</a> ▶一些生活的痕迹 </li>
     </ul>
 
     <footer>
