--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
     <ul>
         <li><a href="story.html">story</a> ▶记录的一些小说和摘录 </li>
     </ul>
-    <h2 class="log">碎碎念</h2>
+    <h2 class="daily">碎碎念</h2>
     <ul>
-        <li><a href="log.html">日志</a> ▶一些生活的痕迹 </li>
+        <li><a href="daily.html">日志</a> ▶一些生活的痕迹 </li>
     </ul>
 
     <footer>
