--- a/daily.html
+++ b/daily.html
@@ -5,14 +5,22 @@
     <meta name="description" content="mathpdf'" />
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>713s Physical</title>
+    <title>713s 碎碎念</title>
 </head>
 <body>
-    <h1 class="title"></h1>
-    <p>now writing...</p>
+    <h1 class="title">一些生活过的痕迹 </h1>
+    <div class="pdf">
+    <h2>Daily</h2>
+    <ul>
+        [<a href="pdf/圣诞PTSD.pdf">圣诞PTSD</a>]  <br>
+        
+
+    </ul>
+    </div>
+
     <a href="index.html">◀RETURN</a>
     <footer>
-        <p>Last Modified: 10:44 2024/02/02</p>
+        <p>Last Modified: 19:23 2024/02/02</p>
     </footer>
 </body>
 </html>
