--- a/log.html
+++ b/log.html
@@ -5,17 +5,16 @@
     <meta name="description" content="mathpdf'" />
     <link rel="stylesheet" href="main.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>713s 日志</title>
+    <title>713s 数学日志</title>
 </head>
 <body>
-    <h1 class="title">一些原有的日志 </h1>
-    <p>一些旧的日志, 后续也会补充. </p>
+    <h1 class="title">一些数学的日志和摘录 </h1>
     <h2>注意事項</h2>
     <ul>
         <li>个人的内容的话, 转载请注明原始出处. </li>
     </ul>
     <div class="pdf">
-    <h2>PDF</h2>
+    <h2>日志记录</h2>
     <ul>
         [<a href="pdf/manifold.pdf">流形</a>] 日文的, 一些流形的内容. "mapstoが今までに書いた数学のPDFを載せています" <br>
         
