--- a/daily.html
+++ b/daily.html
@@ -13,7 +13,9 @@
     <h2>Daily</h2>
     <ul>
         [<a href="pdf/圣诞PTSD.pdf">圣诞PTSD</a>]  <br>
-        
+        [<a href="pdf/Do-not-go-gentle.pdf">Do not go gentle into that good night</a>]  <br>
+        [<a href="pdf/了不起的盖茨比.pdf">The great Gatsby 摘录</a>]  <br>       
+        [<a href="pdf/蘑菇.pdf">菇言菇语--蘑菇俳句</a>]  <br> 
 
     </ul>
     </div>
