--- a/story.html
+++ b/story.html
@@ -16,6 +16,9 @@
         <h2>记录</h2>
         <ul>
             [<a href="pdf/loss-of-heart.pdf">失心</a>], 高中时代在萌芽读过的 <br>
+            [<a href="pdf/Do-not-go-gentle.pdf">Do not go gentle into that good night</a>]  <br>
+            [<a href="pdf/了不起的盖茨比.pdf">The great Gatsby 摘录</a>]  <br>       
+            [<a href="pdf/蘑菇.pdf">菇言菇语--蘑菇俳句</a>]  <br> 
     
         </ul>
     </div>
