--- a/intro.html
+++ b/intro.html
@@ -23,7 +23,7 @@
         <li>数学</li>比较喜欢, 详见<a href="math.html"> MATH </a>
         <li>物理</li>统计物理,热力学 详见<a href="physical.html"> Physical </a>
         <li>计算机</li>初学, 详见<a href="CS.html"> 计算机 </a>
-        <li>阅读</li>喜欢读小说,村上春树,加西亚-马尔克斯
+        <li>阅读</li>喜欢读小说,村上春树,加西亚-马尔克斯, 详见<a href="story.html"> 小说 </a>
         <li>游戏</li>大学时开始打英雄联盟
         <li>Twitter</li>一些碎碎念
         <li>散步</li>无人时分散步
