--- a/math.html
+++ b/math.html
@@ -35,8 +35,8 @@
     </ul>
     <h3>一些摘录</h3>
     <ul>
-        使用知乎很多年了, 很多大佬在知乎持续输出, 学习了很多. 但是很多人也陆续离开, 清空了回答. 后续会把我的收藏夹的一些回答带过来, 并且注明chu'hcu
-        <li><a href="https://www.zhihu.com/people/eureka7"></a></li>
+        使用知乎很多年了, 很多大佬在知乎持续输出, 学习了很多. 但是很多人也陆续离开, 清空了回答. 后续会把我的收藏夹的一些回答带过来, 并且注明出处.
+        <li><a href="https://www.zhihu.com/people/eureka7"> 知乎主页 </a></li>
     </ul>
     <a href="index.html">◀RETURN</a>
     <footer>
