--- a/log.html
+++ b/log.html
@@ -16,11 +16,12 @@
     <div class="pdf">
     <h2>日志记录</h2>
     <ul>
-        [<a href="pdf/manifold.pdf">流形</a>] 日文的, 一些流形的内容. "mapstoが今までに書いた数学のPDFを載せています" <br>
-        
+        [<a href="pdf/manifold.pdf">流形</a>] 日文的, 一些流形的内容. "mapstoが今までに書いた数学のPDFを載せています" <br>        
         [<a href="pdf/udlimit.pdf">测度论中上下极限</a>] 当时不理解的内容<br>
-        
-
+        [<a href="pdf/Uniform-convergence.pdf">一致收敛</a>] 当时不理解的内容<br>       
+        [<a href="pdf/Lipschitz.pdf">Lipschitz</a>] Lipschitz条件<br>       
+        [<a href="pdf/jump.pdf">Jump</a>] jump<br> 
+        [<a href="pdf/Stochastic-Calculus-with-askzzy.pdf">Jump</a>] 学习随机分析的一些记录<br> 
     </ul>
     </div>
 
