--- a/story.html
+++ b/story.html
@@ -19,7 +19,10 @@
             [<a href="pdf/Do-not-go-gentle.pdf">Do not go gentle into that good night</a>]  <br>
             [<a href="pdf/了不起的盖茨比.pdf">The great Gatsby 摘录</a>]  <br>       
             [<a href="pdf/蘑菇.pdf">菇言菇语--蘑菇俳句</a>]  <br> 
-    
+            [<a href="pdf/2017Graduation-Speech-University-of-Chicago.pdf">2017Graduation-Speech-University-of-Chicago</a>]  <br>
+            [<a href="pdf/The-broken-heart-story.pdf">The broken heart story</a>]  <br> 
+            [<a href="pdf/Komm-susser-Tod.pdf">来吧,甜蜜的死亡</a>]  <br> 
+
         </ul>
     </div>
 
