--- a/log.html
+++ b/log.html
@@ -21,7 +21,7 @@
         [<a href="pdf/Uniform-convergence.pdf">一致收敛</a>] 当时不理解的内容<br>       
         [<a href="pdf/Lipschitz.pdf">Lipschitz</a>] Lipschitz条件<br>       
         [<a href="pdf/jump.pdf">Jump</a>] jump<br> 
-        [<a href="pdf/Stochastic-Calculus-with-askzzy.pdf">Jump</a>] 学习随机分析的一些记录<br> 
+        [<a href="pdf/Stochastic-Calculus-with-askzzy.pdf">Stochastic Calculus</a>] 学习随机分析的一些记录<br> 
     </ul>
     </div>
 
