--- a/daily.html
+++ b/daily.html
@@ -13,7 +13,7 @@
     <h2>Daily</h2>
     <ul>
         [<a href="pdf/圣诞PTSD.pdf">圣诞PTSD</a>]  <br>
-        [<a href="pdf/1Q84.pdf">圣诞PTSD</a>]  <br>       
+        [<a href="pdf/1Q84.pdf">1Q84</a>]  <br>       
 
     </ul>
     </div>
